--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
 }
 
 .articles-row {
-    height: 500px;
-    margin: 10px; 
+    height: 80%;
+    margin: 10px 0;
 }
 
 .section-title{
@@ -42,21 +42,13 @@
     bottom: 5%;
 }
 
-.article-right {
-    height: 50%;
-}
-
-.articles-row .col-md-6 img {
-    width: 100%;    
-}
-
 a:hover {
     color: yellow;
 }
 
 .score-board {
     color: white;
-    background-color: #961432;
+    background-color: #6e0a28;
     font-size: 30px;
     font-weight: 100;
     height: 180px;
@@ -66,7 +58,7 @@ a:hover {
 
 .score-board .marker {
     text-align: center;    
-    font-weight: 700;    
+    font-weight: 700;
 }
 
 .score-board .tournament{
@@ -95,11 +87,12 @@ a:hover {
 }
 
 .vertical-line-left{
-    border-left: 1px solid white;
+    border-left: 1px solid #961432;
+    
 }
 
 .vertical-line-right{
-    border-right: 1px solid white;
+    border-right: 1px solid #961432;
 }
 
 .score-board .teams{
@@ -119,10 +112,14 @@ a:hover {
     overflow: hidden;
 }
 
-button {
+.btn-bay {
     color: white;
     background-color: #961432;
     font-family: expressBold;
     text-transform: uppercase;
     font-weight: 500;
+}
+
+.btn-bay .dropdown-toggle {
+    background-color: #961432
 }
